package refactortoec.donutshop;

public record Customer(int id, String name, String streetAddress, String state)
{
}
