package refactortoec.donutshop;

public record Donut(String code, String description, double price, double discountPrice)
{
}
