package refactortoec.donutshop;

public record OrderItem(String donutCode, int count)
{
}
