@startuml
'https://plantuml.com/class-diagram

class Donut
{
code: String
description: String
price: double
discountPrice: double
}
class DonutShop
class Order
{
customerId: int
deliveryDate: LocalDate
}
class OrderItem
{
    donutCode: String
    count: int
}
class Customer
{
id: int
name:  String
streetAddress: String
state: String
}

DonutShop --> " * " Donut
DonutShop --> " * " Order
DonutShop --> " * " Customer

Order --> " * " OrderItem
@enduml